--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,6 +1,8 @@
-#monitor=eDP-1,disable
-monitor=HDMI-A-1,2560x1440@144,0x0,1
-monitor=eDP-1,1920x1080@300,2560x0,1
+# Monitor config
+# monitor = HDMI-A-1, 2560x1440@144, 0x0, 1
+# monitor = eDP-1, 1920x1080@300, 2560x0, 1
+monitor = , preferred, auto, 1
+
 
 # Setting dark theme on gtk apps
 exec = gsettings set org.gnome.desktop.interface gtk-theme Sweet
@@ -32,11 +34,8 @@ $filemanager = nemo
 exec = gsettings set org.cinnamon.desktop.default-applications.terminal exec $terminal
 
 input {
-    kb_layout=
     kb_variant=ffffff
-    kb_model=
     kb_options=caps:escape
-    kb_rules=
 
     follow_mouse=1
 
@@ -48,6 +47,7 @@ input {
     }
 }
 
+# Touchpad needs faster sensitivity
 device {
     name="asue1403:00-04f3:319a-touchpad"
     sensitivity=1.0
@@ -78,7 +78,6 @@ decoration {
 
 animations {
     enabled=1
-    # bezier=overshot,0.05,0.9,0.1,1.1
     bezier=overshot,0.13,0.99,0.29,1.1
     animation=windows,1,4,overshot,slide
     animation=border,1,10,default
@@ -97,11 +96,11 @@ gestures {
 
 # example window rules
 # for windows named/classed as abc and xyz
-#windowrule=move 69 420,abc
-windowrule=float,title:^(fly_is_foot)$
-windowrule=move 25% 50,title:^(fly_is_foot)$
-windowrule=size 50% 720,title:^(fly_is_foot)$
-windowrule=stayfocused,title:^(fly_is_foot)$
+# windowrule=move 69 420,abc
+windowrule = float, title:^(fly_is_foot)$
+windowrule = move 25% 50, title:^(fly_is_foot)$
+windowrule = size 50% 720, title:^(fly_is_foot)$
+windowrule = stayfocused, title:^(fly_is_foot)$
 
 windowrule = float, Rofi
 
